--- a/default-content.html
+++ b/default-content.html
@@ -7,7 +7,9 @@
 <body>
 
 <div id="default">
-	<p>Choose a plugin from the leftside categories.</p>
+	<p>
+		Choose a plugin from the leftside categories. Click it again to open in a new tab (window). ;)
+	</p>
 </div>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
