--- a/default-content.html
+++ b/default-content.html
@@ -4,11 +4,11 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-<body>
+<body id="default-body">
 
 <div id="default">
 	<p>
-		Choose a plugin from the leftside categories. Click it again to open in a new tab (window). ;)
+		Choose a plugin from the leftside categories.
 	</p>
 </div>
 
