--- a/default-content.html
+++ b/default-content.html
@@ -6,10 +6,13 @@
 </head>
 <body id="default-body">
 
+<a href="https://github.com/flaviusmatis/plugins" target="_blank"><img alt="Fork me on GitHub" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" style="position:absolute;top:0;right:0;border:0;z-index:2;"></a>
+
 <div id="default">
-	<p>
-		Choose a plugin from the leftside categories.
-	</p>
+	<h2>A personal collection of handpicked Javascript resources</h2>
+	<p>The resources you'll find here are collected, sorted and filtered by me over the past months/years. There is no guarantee that these are the best you can find, though I try to stay up to date with the latest goodies on the interwebs.</p>
+	<p>If you have suggestions for new entries or usability improvements, you can submit <a href="https://github.com/flaviusmatis/plugins/issues" target="_blank">an issue</a> at anytime. If your entry is not accepted for whatever reason, forking this project and creating your own private/public collection is always an option.</p>
+	<p><a href="http://flaviusmatis.github.com/" target="_blank">http://flaviusmatis.github.com/</a></p>
 </div>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
