--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<title>Plugins</title>
+	<title>Handpicked Javascript Plugins</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
@@ -11,15 +11,11 @@
 	<div id="search-wrapper" class="search">
 		<input type="text" name="search" placeholder="Type to search"/>
 	</div>
-	<div id="plugins" class="plugins">
-
-	</div>
+	<div id="plugins" class="plugins"></div>
 </div>
 
 <div id="plugins-content" class="plugins-content">
-	<iframe src="default-content.html" width="100%" height="100%" frameborder="0">
-		<p>Your browser does not support iframes. That kinda sucks, eh?</p>
-	</iframe>
+	<iframe src="default-content.html" width="100%" height="100%" frameborder="0"></iframe>
 </div>
 
 <script id="cateogories-tmpl" type="text/x-jquery-tmpl">
@@ -51,8 +47,10 @@
 	</ul>
 </script>
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script type="text/javascript" src="jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="jquery.tmpl.min.js"></script>
+<script type="text/javascript" src="categories.js"></script>
+<script type="text/javascript" src="plugins.js"></script>
 <script type="text/javascript" src="script.js"></script>
 
 </body>
