--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<title>Handpicked Javascript Plugins</title>
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
 
@@ -15,7 +15,7 @@
 </div>
 
 <div id="plugins-content" class="plugins-content">
-	<iframe src="default-content.html" width="100%" height="100%" frameborder="0"></iframe>
+	<iframe src="default.html" width="100%" height="100%" frameborder="0"></iframe>
 </div>
 
 <script id="cateogories-tmpl" type="text/x-jquery-tmpl">
@@ -47,11 +47,11 @@
 	</ul>
 </script>
 
-<script type="text/javascript" src="jquery-1.8.3.min.js"></script>
-<script type="text/javascript" src="jquery.tmpl.min.js"></script>
-<script type="text/javascript" src="categories.js"></script>
-<script type="text/javascript" src="plugins.js"></script>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
+<script type="text/javascript" src="js/jquery.tmpl.min.js"></script>
+<script type="text/javascript" src="js/categories.js"></script>
+<script type="text/javascript" src="js/plugins.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 
 </body>
 </html>
